objects/Product_Review__c.object
<CustomObject>
    <description>used to house entries for product performance related to POA&apos;s</description>
    <fields>
        <fullName>Actions_Taken_Recommendations__c</fullName>
        <label>Actions Taken/Recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bing_Live__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Bing/Live</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biz_Yelp__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Biz. Yelp</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blogger__c</fullName>
        <inlineHelpText>Y = Compliant with Posting, N = Not Compliant with Posting, N/A = Not Applicable/No Access to Client Account</inlineHelpText>
        <label>Blogger (2 Blog Posts/Month)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Allocations__c</fullName>
        <label>Budget Allocations</label>
        <picklist>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Objectives__c</fullName>
        <label>Budget &amp; Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Not Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Pacing__c</fullName>
        <label>Budget Pacing</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Related_POA__r.Business_Unit__c</formula>
        <inlineHelpText>Automatically pulls from the POA Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Check__c</fullName>
        <label>Call # Check</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Search_City_Grid__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>City Search/City Grid</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Goals_Being_Met__c</fullName>
        <label>Client Goals Being Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Specials__c</fullName>
        <label>Client Specials</label>
        <picklist>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Changed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Exclusions__c</fullName>
        <label>Display Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_14_posts_week__c</fullName>
        <inlineHelpText>Y = Compliant with Posting, N = Not Compliant with Posting, N/A = Not Applicable/No Access to Client Account</inlineHelpText>
        <label>Facebook (7-10 posts/week)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foursquare__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Foursquare</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Local__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Google+/Local</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <inlineHelpText>Y = Compliant with Posting, N = Not Compliant with Posting, N/A = Not Applicable/No Access to Client Account</inlineHelpText>
        <label>Google+ (3-5 Posts/Week)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Products__c</fullName>
        <description>Haystak Client Products</description>
        <label>Haystak Products</label>
        <picklist>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO / SEM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IAR_Age__c</fullName>
        <formula>IF( 
ISBLANK(Prior_IAR_Date__c ), NULL, Review_Date__c -Prior_IAR_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field to record the # of days between the current review date and the last IAR date</inlineHelpText>
        <label>IAR Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insider_Pages__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Insider Pages</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Check__c</fullName>
        <label>Inventory Check</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KW_Diagnosis__c</fullName>
        <label>KW Diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_Circle__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Merchant Circle</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Check_CPL__c</fullName>
        <label>Metric Check - CPL</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Check_CTR__c</fullName>
        <label>Metric Check - CTR</label>
        <picklist>
            <picklistValues>
                <fullName>Not On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Check_Conv_Rate__c</fullName>
        <label>Metric Check - Conv Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Not On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Performance_Check_MoM__c</fullName>
        <label>Performance Check - MoM</label>
        <picklist>
            <picklistValues>
                <fullName>Performance Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stayed the Same</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Check__c</fullName>
        <label>Performance Check - Week Over Week</label>
        <picklist>
            <picklistValues>
                <fullName>Performance Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stayed the Same</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pinterest__c</fullName>
        <inlineHelpText>Y = Compliant with Posting, N = Not Compliant with Posting, N/A = Not Applicable/No Access to Client Account</inlineHelpText>
        <label>Pinterest (10 pins &amp; 5 People/Month)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Client_Concerns_Description__c</fullName>
        <inlineHelpText>enter the items that have not been addressed as selected in Previous Client Concerns picklist</inlineHelpText>
        <label>Previous Client Concerns (Description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Client_Concerns__c</fullName>
        <label>Previous Client Concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Addressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_IAR_Date__c</fullName>
        <inlineHelpText>Record the current Last Utilization Review Date from the POA</inlineHelpText>
        <label>Prior IAR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the POA this IAR is related to</inlineHelpText>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipName>IAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQR_Report__c</fullName>
        <label>SQR Report</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Super_Pages__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Super Pages</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_21_posts_week__c</fullName>
        <inlineHelpText>Y = Compliant with Posting, N = Not Compliant with Posting, N/A = Not Applicable/No Access to Client Account</inlineHelpText>
        <label>Twitter (10-14 posts/week)</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utilization_Notes__c</fullName>
        <label>Utilization Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <picklist>
            <picklistValues>
                <fullName>Week 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yahoo_Local__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Yahoo Local</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yellow_Pages__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>Yellow Pages</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YouTube__c</fullName>
        <inlineHelpText>Y = Claimed/Verified/Connected, N = Not Claimed/Not Verfied, P = Pending Dealership Aciton, C/NA = Claimed but no Access to Listing</inlineHelpText>
        <label>YouTube</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C/NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Review</label>
    <nameField>
        <displayFormat>PR-{YYYY}{MM}-{0}</displayFormat>
        <label>PR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Reviews</pluralLabel>
    <recordTypes>
        <fullName>DOD</fullName>
        <active>true</active>
        <description>Dealer of the Day - used by Haystak Social</description>
        <label>DOD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hay_SEM_Week_1</fullName>
        <active>true</active>
        <description>Haystak Account Review</description>
        <label>Haystak IAR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>